--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prompts": "2.4.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-cookie": "^4.0.3",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
